Integrated the Horizontal Divider View I made

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-	<string name="app_name">Scouting</string>
+	<string name="app_name">FRC Scouting</string>
 	<string name="hello_world">Hello world!</string>
 	<string name="menu_settings">Settings</string>
+	<string name="title_activity_match_edit">Match Edit</string>
+	<string name="teamNumLabel">Team Number:</string>
 
 </resources>
